--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,10 @@ before_script:
 build_job:
   stage: build
   script:
-    - echo 'Building'
+    - cd src/
+    - docker build -t post:1.0 ./post-py
+    - docker build -t comment:1.0 ./comment
+    - docker build -t ui:1.0 ./ui
 
 test_unit_job:
   stage: test
@@ -39,6 +42,17 @@ deploy_dev_job:
     name: dev
     url: http://dev.example.com
 
+branch review:
+  stage: review
+  script: echo "Deploy to $CI_ENVIRONMENT_SLUG"
+  environment:
+    name: branch/$CI_COMMIT_REF_NAME
+    url: http://$CI_ENVIRONMENT_SLUG.example.com
+  only:
+    - branches
+  except:
+    - master 
+
 staging:
   stage: stage
   when: manual
@@ -56,7 +70,7 @@ production:
   only:
     - /^\d+\.\d+\.\d+/
   script:
-    - echo 'Deploy prod'
+    - echo 'Deploy'
   environment:
     name: production
     url: https://example.com
