Homework №22. Logging and distributed tracing

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -9,23 +9,57 @@ services:
         aliases:
           - post_db
           - comment_db
+
   ui:
     image: ${USERNAME}/ui:${UVER}
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+      - POST_SERVICE_HOST=post
+      - POST_SERVICE_PORT=5000
+      - COMMENT_SERVICE_HOST=comment
+      - COMMENT_SERVICE_PORT=9292
     ports:
       - ${UIPORT}:${UIPORT}/tcp
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.ui
     networks:
       - front_net
   post:
     image: ${USERNAME}/post:${PVER}
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
+      - POST_DATABASE_HOST=post_db
+      - POST_DATABASE=posts
+    depends_on:
+      - post_db
+    ports:
+      - "5000:5000"
+    logging:
+      driver: "fluentd"
+      options:
+        fluentd-address: localhost:24224
+        tag: service.post
     networks:
-      - back_net
-      - front_net
+      back_net:
+       aliases:
+        - post
+      front_net:
+       aliases:
+        - post
   comment:
     image: ${USERNAME}/comment:${CVER}
+    environment:
+      - ZIPKIN_ENABLED=${ZIPKIN_ENABLED}
     networks:
-      - back_net
-      - front_net
-
+      back_net:
+       aliases:
+        - comment
+      front_net:
+        aliases:
+         - comment
 volumes:
   post_db:
 
